sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:4: error: not found: value ecart
  while(ecart > 1){
        ^AlgCombSort:5: error: not found: value ecart
   ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
   ^AlgCombSort:6: error: not found: value i
  i = 0
  ^AlgCombSort:7: error: not found: value i
  while(i+ecart < getNombreValeurs()){
        ^AlgCombSort:7: error: not found: value ecart
  while(i+ecart < getNombreValeurs()){
          ^AlgCombSort:8: error: not found: value i
    if(plusPetit(i+ecart:Int,i:Int)){
                 ^AlgCombSort:8: error: not found: value ecart
    if(plusPetit(i+ecart:Int,i:Int)){
                   ^AlgCombSort:8: error: not found: value i
    if(plusPetit(i+ecart:Int,i:Int)){
                             ^AlgCombSort:9: error: not found: value i
      echange(i:Int, i+ecart:Int)
              ^AlgCombSort:9: error: not found: value i
      echange(i:Int, i+ecart:Int)
                     ^AlgCombSort:9: error: not found: value ecart
      echange(i:Int, i+ecart:Int)
                       ^AlgCombSort:10: error: not found: value i
      i = i+1
      ^